# building-placement-tool

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_linux.sh  build_linux_debug.sh  conanfile.txt  run_app.sh  run_game_linux.sh  run_tools.py
assets/: assets.cxadb
assets/raw/: asset_db.xlsx
assets/raw/spritesheets/: sitting-dog.aseprite  sitting-dog.json  smiley.aseprite  smiley.cxssd  smiley.json
assets/raw/textures/: default.aseprite
assets/spritesheets/: birthday-cake.cxssd  birthday-cake.json  sitting-dog.cxssd  sitting-dog.json  smiley.cxssd
boyet/: CMakeLists.txt
boyet/src/: CMakeLists.txt
boyet/src/boyet/: Application.cpp  Application.hpp  CMakeLists.txt
boyet/src/boyet/scenes/: CMakeLists.txt  TheVoid.cpp  TheVoid.hpp
bpt/: CMakeLists.txt
bpt/src/: CMakeLists.txt
bpt/src/bpt/: Application.cpp  Application.hpp  CMakeLists.txt  Context.hpp  GA.cpp  GA.hpp  GD.cpp  GD.hpp  GWO.cpp  GWO.hpp  HC.cpp  HC.hpp  MainScene.cpp  MainScene.hpp  PSO.cpp  PSO.hpp  SA.hpp  evaluator.cpp  evaluator.hpp  generator.cpp  generator.hpp  gui.hpp  json_specializations.hpp  operators.cpp  operators.hpp  utils.cpp  utils.hpp
bpt/src/bpt/ds/: AlgorithmType.hpp  CrossoverType.hpp  GAResult.cpp  GAResult.hpp  GASettings.hpp  GWOData.hpp  GWOResult.cpp  GWOResult.hpp  InputBuilding.hpp  LSSettings.hpp  PSOResult.cpp  PSOResult.hpp  Particle.hpp  Result.cpp  Result.hpp  SelectionType.hpp  Solution.cpp  Solution.hpp  Time.cpp  Time.hpp  Wolf.cpp  Wolf.hpp
cmake/: BuildType.cmake
conan_profiles/: linux_debug.txt  linux_release.txt
corex/: CMakeLists.txt
corex/src/: CMakeLists.txt
corex/src/corex/core/: Application.cpp  Application.hpp  Asset.hpp  AssetDBRecord.hpp  AssetManager.cpp  AssetManager.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  CameraZoomState.hpp  CoreXNull.cpp  CoreXNull.hpp  DebugSettings.hpp  DebugUI.cpp  DebugUI.hpp  PerformanceMetrics.hpp  ReturnState.hpp  ReturnValue.hpp  SVar.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  SceneManagerStatus.hpp  SceneStatus.hpp  Settings.cpp  Settings.hpp  SettingsValue.hpp  Timer.cpp  Timer.hpp  WindowManager.cpp  WindowManager.hpp  allocator.cpp  asset_functions.cpp  asset_functions.hpp  main.cpp  math_functions.cpp  math_functions.hpp  sdl_deleters.cpp  sdl_deleters.hpp  (+2 more)
corex/src/corex/core/asset_types/: Font.hpp  SpritesheetData.hpp  SpritesheetState.hpp  Texture.hpp
corex/src/corex/core/components/: Position.hpp  RenderCircle.hpp  RenderLineSegments.hpp  RenderPolygon.hpp  RenderRectangle.hpp  Renderable.hpp  RenderableType.hpp  Sprite.hpp  SpritesheetCurrentFrameIndex.hpp  SpritesheetCurrentState.hpp  SpritesheetCustomStates.hpp  SpritesheetFrameData.hpp  SpritesheetFrames.hpp  Text.cpp  Text.hpp
corex/src/corex/core/ds/: Circle.hpp  Line.hpp  LineSegments.hpp  NPolygon.hpp  Point.hpp  Polygon.hpp  Range.hpp  Rectangle.hpp  Tree.hpp  TreeNode.hpp  Vec2.cpp  Vec2.hpp  VecN.cpp  VecN.hpp
corex/src/corex/core/events/: KeyboardEvent.hpp  MouseButtonEvent.hpp  MouseMovementEvent.hpp  MouseScrollEvent.hpp  game_events.hpp  metric_events.hpp  scene_manager_events.hpp  sys_events.hpp
corex/src/corex/core/systems/: BaseSystem.cpp  BaseSystem.hpp  KeyState.hpp  KeyStatus.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  MouseButtonState.hpp  MouseButtonType.hpp  MouseHandler.cpp  MouseHandler.hpp  SpritesheetAnimation.cpp  SpritesheetAnimation.hpp  SysEventDispatcher.cpp  SysEventDispatcher.hpp  dummy.cpp
corex/tests/: CMakeLists.txt
corex/tests/corex/: CMakeLists.txt
corex/tests/corex/core/: CMakeLists.txt
corex/tools/: export_aseprite_spritesheet.py  export_assetdb.py
corex/tools/aseprite-export-as-cxssd/: Export as CXSSD.lua  LICENSE  README.md
data/: input_data.bptdat  input_data_light.bptdat  input_data_mKra30a.bptdat  input_data_medium_test.bptdat  input_data_sflp2.bptdat  input_data_sflp3.bptdat  input_data_small_test.bptdat
libs/: CMakeLists.txt
libs/imgui_impls/: CMakeLists.txt  README.md  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
scripts/clion/linux/: copy_assets_settings_to_build_dir.sh
settings/: settings.cxstg
